--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -32,15 +32,23 @@
   color: #333;
 
   .app-logo {
-    width: 90px;
-    height: 90px;
+    width: 120px;
+    height: 120px;
     background: white;
-    border-radius: 25px;
+    border-radius: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 0 auto 20px;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+
+    .logo-img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      border-radius: 24px;
+    }
 
     ion-icon {
       font-size: 50px;
@@ -131,6 +139,16 @@
     font-size: 15px;
     --placeholder-color: #999;
     --placeholder-opacity: 1;
+
+    // Override browser autofill styling
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus,
+    input:-webkit-autofill:active {
+      -webkit-box-shadow: 0 0 0 30px #f8f9fa inset !important;
+      -webkit-text-fill-color: #333 !important;
+      transition: background-color 5000s ease-in-out 0s;
+    }
   }
 
   .visibility-toggle {
@@ -138,7 +156,7 @@
     --padding-end: 0;
     margin: 0;
     height: 40px;
-    
+
     ion-icon {
       color: #69635D;
       font-size: 22px;
